# turnkey-mcp

./: .gitattributes  CHANGELOG.md  Cargo.toml  EXTRACTION.md  NOTES.md  README.md
.github/workflows/: ci.yml
.ishoo/records/decisions/: DEC-01.rec
.ishoo/records/issues/: ADPT-01.rec  CHOR-01.rec  CHOR-02.rec  FEAT-01.rec  FIX-01.rec  FIX-02.rec  FIX-03.rec  ISS-01.rec  TEST-01.rec  TEST-02.rec
examples/: minimal.rs
src/: agent_guard.rs  capture.rs  lib.rs  manifest.rs  response.rs  server.rs  shell_guard.rs  sidecar.rs  types.rs
src/adapters/: mod.rs
tests/: owner_shutdown_race.rs
