[package]
name = "turnkey-mcp"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Turnkey MCP for apps: stdio protocol, typed tools, host setup, sidecar lifecycle, and manifest-friendly integration."
repository = "https://github.com/junovhs/turnkey-mcp"
readme = "README.md"
keywords = ["mcp", "agents", "model-context-protocol", "sidecar"]
categories = ["development-tools", "api-bindings"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_IO",
  "Win32_System_Threading"
] }

[dev-dependencies]
tempfile = "3"
